--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
   <section class="hero">
     <div>
-      <h1>Your podcast edited, clipped, branded &amp; distributed—while you keep billing $500-$1,500/hr.</h1>
+      <h1>Your podcast edited, clipped, branded &amp; distributed—All Done For You.</h1>
       <p>We turn one raw recording into a polished episode, 5-7 short-form reels, thumbnail pack, show notes, email blast &amp; weekly analytics. You press record. We handle the rest.</p>
       <a class="btn" href="#contact">Book a 10-min fit call</a>
     </div>
@@ -259,3 +259,4 @@
 </body>
 
 </html>
+
